--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
 
                 <div class="event-item">
                     <div class="event-icon">
-                        <img src="/img/fiesta.gif"
+                        <img src="~/img/fiesta.gif"
                             style="width:70px;height:70px;object-fit:contain;display:block;margin:0 auto;">
                     </div>
                     <div class="event-label">Fiesta</div>
