Corrige las rutas de las imágenes en la invitación

--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
     <div class="invitation" id="mainInvitation">
         <div class="header">
             <div class="decorative-element">
-                <img src="/img/boda.png"
+                <img src="img/boda.png"
                     style="width:60px;height:60px;object-fit:contain;display:block;margin:0 auto;">
             </div>
             <h1 class="invitation-title">¡Nos Casamos!</h1>
@@ -864,7 +864,7 @@
             <!-- Sección de musica -->
             <div class="music-section fade-in delay-5">
                 <div class="music-icon">
-                    <img src="/img/disco-ball.gif"
+                    <img src="img/disco-ball.gif"
                         style="width:70px;height:70px;object-fit:contain;display:block;margin:0 auto;">
                 </div>
                 <div class="music-title">¡Armemos juntos la playlist!</div>
@@ -888,7 +888,7 @@
             <!-- Sección de regalos -->
             <div class="gift-section slide-left delay-2">
                 <div class="gift-icon">
-                    <img src="/img/sorpresa.gif" alt="Caja de regalo animada" class="gift-img">
+                    <img src="img/sorpresa.gif" alt="Caja de regalo animada" class="gift-img">
                 </div>
                 <div class="gift-title">
                     ¿Querés hacernos un regalo?
@@ -904,7 +904,7 @@
 
             <div class="gift-section slide-left delay-2">
                  <div class="gift-icon">
-                    <img src="/img/camara.gif" alt="camara animada" class="photo-img">
+                    <img src="img/camara.gif" alt="camara animada" class="photo-img">
                 </div>
                 <div class="photo-upload-title">
                     ¿Sacaste fotos en la fiesta o civil ?<br>
@@ -921,7 +921,7 @@
             <!-- Sección para subir fotos de las fiestas -->
             <h3 class="rsvp-title">Confirmá tu asistencia</h3>
             <div class="rsvp-icon">
-                <img src="/img/engagement.gif"
+                <img src="img/engagement.gif"
                     style="width:70px;height:70px;object-fit:contain;display:block;margin:0 auto;">
             </div>
             <p class="rsvp-text">
